ui: align library content width with controls row
- Wrapped library container in transparent box for consistent width
- Applied same px-5 container width as controls row
- Added mt-2 for spacing from box

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -124,11 +124,13 @@
                 <span class="is-size-7 opacity-50" id="totalItemsCountMobile">-- itens</span>
             </div>
         </div>
-    </div>
+        </div>
 
     <!-- Library Content -->
-    <div id="libraryContainer" class="columns is-multiline is-variable is-3">
-        <!-- Dynamic content injected via JS -->
+    <div class="box p-2 bg-transparent shadow-none border-none">
+        <div id="libraryContainer" class="columns is-multiline is-variable is-3 mt-2">
+            <!-- Dynamic content injected via JS -->
+        </div>
     </div>
 
     <!-- No Results -->
