style: use is-warning for Full Scan and Force Update buttons
- Buttons now use is-warning is-outlined for better visibility in dark mode
- Removed old CSS overrides that were needed for is-dark buttons

--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -301,7 +301,7 @@
                                         </div>
                                     </div>
                                     <div class="column is-narrow">
-                                        <button class="button is-dark is-outlined scanBtn mr-2" onclick="scanLibrary()">
+                                        <button class="button is-warning is-outlined scanBtn mr-2" onclick="scanLibrary()">
                                             <span class="icon"><i class="bi bi-arrow-clockwise"></i></span>
                                             <span>{{ t('Full Scan') }}</span>
                                         </button>
@@ -506,7 +506,7 @@
                                     <i class="bi bi-database-fill mr-2"></i> {{ t('TitleDB Sources') }}
                                 </p>
                                 <div class="card-header-icon pt-4 pr-5">
-                                    <button class="button is-small is-dark is-outlined updateTitleDBBtn"
+                                    <button class="button is-small is-warning is-outlined updateTitleDBBtn"
                                         onclick="forceTitleDBUpdate()">
                                         <i class="bi bi-cloud-download mr-1"></i> {{ t('Force Update') }}
                                     </button>
