--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -127,7 +127,7 @@
         </div>
 
     <!-- Library Content -->
-    <div class="box p-2 bg-transparent shadow-none border-none">
+    <div class="box bg-transparent shadow-none border-none">
         <div id="libraryContainer" class="columns is-multiline is-variable is-3 mt-2" style="overflow-x: hidden;">
             <!-- Dynamic content injected via JS -->
         </div>
